# Cosi-Skill-World

./: .env.example  .gitignore  COSI_TODO_update_instructions_for_AI_engineer.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/gp-visit-jp-runtime/: README.md  pyproject.toml
apps/gp-visit-jp-runtime/src/: __init__.py  main.py
apps/gp-visit-jp-runtime/tests/: test_runtime_contract.py
apps/hermes-orchestrator/: Dockerfile  README.md  pyproject.toml
apps/hermes-orchestrator/src/: hermes_observability.py  main.py  org_skill_store.py  runtime_proxy.py
apps/hermes-orchestrator/tests/: runtime_contract_fixture.py  test_marketplace.py  test_runtime_proxy_contract.py
apps/mr-visit-jp-runtime/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/mr-visit-jp-runtime/alembic/: env.py
apps/mr-visit-jp-runtime/memory/: k0_progress.md  k1_progress.md
apps/mr-visit-jp-runtime/src/: event_taxonomy.py  export_human_review_fixture_candidates.py  import_file_data_to_sql.py  main.py  offline_evaluation_report.py  runtime_config.py  runtime_context.py  runtime_observability.py  runtime_sql_metadata.py  seed_demo_data.py  seed_training_data.py  session_events.py
apps/mr-visit-jp-runtime/tests/: conftest.py  test_api_response_contracts.py  test_auth_rbac.py  test_compliance_channel.py  test_compliance_recommendations.py  test_continuity.py  test_curriculum_assets.py  test_demo_progress_seed.py  test_evaluation_gate_service.py  test_export_human_review_fixture_candidates_cli.py  test_file_persistence_safety.py  test_human_review_feedback_service.py  test_import_file_data_to_sql.py  test_multi_persona.py  test_multi_tenancy.py  test_offline_evaluation_report.py  test_openai_compat_provider.py  test_persistence_manual.py  test_playbook_validation.py  test_progress_tracker.py  (+10 more)
(+265 files in other folders)
