[project]
name = "gp-visit-jp-runtime"
version = "0.1.0"
description = "Minimal domain runtime for Japanese GP visit spike"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
