[project]
name = "hermes-orchestrator"
version = "0.1.0"
description = "Thin orchestrator for cosi-skill-world"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0",
  "jsonschema>=4.23.0"
]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/skill-registry/src"]
